
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int Unit ;
struct TYPE_4__ {int exec_context; } ;
typedef TYPE_1__ Mount ;
typedef int ExecCleanMask ;


 TYPE_1__* MOUNT (int *) ;
 int assert (TYPE_1__*) ;
 int exec_context_get_clean_mask (int *,int *) ;

__attribute__((used)) static int mount_can_clean(Unit *u, ExecCleanMask *ret) {
        Mount *m = MOUNT(u);

        assert(m);

        return exec_context_get_clean_mask(&m->exec_context, ret);
}
